# QKLU_ARM

./: CMakeLists.txt  Dockerfile  README.md  exec.sh  linux_cmake  main.c
res/: test01.mtx  test02.mtx  test03.mtx  test04.mtx
src/: check.c  check.h  etree.c  etree.h  factor_cuda_v00.cu  factor_parallel_v01.c  factor_prallal_v00.c  factor_v00.c  factor_v01.c  factor_v02.c  l2matrix  layer_matrix.c  layer_matrix.h  numerical.c  numerical.h  part3_solver.h  pivoting.c  pivoting.h  preprocess.c  preprocess.h  reorder.c  reorder.h  solving.c  solving.h  symb_calc.c  symbol_calc.h  symbolic_analysis.cpp  symbolic_analysis.h  topo.cpp  toposort.c  toposort.cpp  toposort.h  umfpack_solver.c
src/base/: base_math.h  file.c  file.h  forest.c  forest.h  identify_chip.c  identify_chip.h  log.h  malloc.c  malloc.h  matrix.c  matrix.h  plot.c  plot.h  sort.c  sort.h  vector_util.cpp  vector_util.h
test/: makefile  merge_tree.c  mkl_lu_sp.cpp  read_csc.c  test_DTSTRF.c  test_L2mtriax.c  test_blocking.cpp  test_blocking2.c  test_dense_lu.c  test_etree.cpp  test_gessm.c  test_load_matrix.cpp  test_lower_solving.c  test_lu_sp.c  test_mc64.cpp  test_printf.cpp  test_remove_idx.c  test_reorder_big_num_range.c  test_spgemm.c  test_sum_cir.cpp  test_topo_factor.c  test_umfpack_cut.c  test_upper_solving.cpp
test/test_etree/: test_forest.c  toposort.c
test/test_preprocess/: create_etree.c  heap_merge.c  segment_thick.c  test_calc_cut_point.c  test_symb_calc.c
